--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,3 +24,8 @@ jobs:
               run: |
                 cd ciphers_project
                 python3 manage.py test
+            - name: Build and push the image
+              run: |
+                docker login --username aniket2468 --password ${{secrets.ACCESS_TOKEN}} ghcr.io
+                docker build -t ghcr.io/aniket2468/ciphers-service: latest file Dockerfile.
+                docker push ghcr.io/aniket2468/ciphers-service: latest
