--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,31 @@
-name: Run The Tests
+name: Run The Tests, Build the image
 on:
-    push:
-        branches:
-            - master
-    pull_request:
-        branches:
-            - master
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v2
-            - name: Set up Python 3.11
-              uses: actions/setup-python@v2
-              with:
-                python-version: 3.11
-            - name: Install dependencies
-              run: |
-                python -m pip install --upgrade pip 
-                pip install -r requirements.txt
-                
-            - name: Unit Testing
-              run: |
-                cd ciphers_project
-                python3 manage.py test
-            - name: Build and push the image
-              run: |
-                docker login --username aniket2468 --password ${{secrets.ACCESS_TOKEN}} ghcr.io
-                docker build -t ghcr.io/aniket2468/ciphers-service:latest-file Dockerfile .
-                docker push ghcr.io/aniket2468/ciphers-service:latest
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.11
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip 
+        pip install -r requirements.txt
+        
+    - name: Unit Testing
+      run: |
+        cd ciphers_project
+        python3 manage.py test
+    - name: Build and push the image
+      run: |
+        docker login --username aniket2468 --password ${{secrets.ACCESS_TOKEN}} ghcr.io
+        docker build -t ghcr.io/aniket2468/ciphers-service:latest-file Dockerfile .
+        docker push ghcr.io/aniket2468/ciphers-service:latest
