--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,5 +27,5 @@ jobs:
     - name: Build and push the image
       run: |
         docker login --username aniket2468 --password ${{secrets.ACCESS_TOKEN}} ghcr.io
-        docker build -t ghcr.io/aniket2468/ciphers-service:latest-file Dockerfile .
+        docker buildx build -t ghcr.io/aniket2468/ciphers-service:latest-file . --push
         docker push ghcr.io/aniket2468/ciphers-service:latest
