--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,5 @@ jobs:
     - name: Build and push the image
       run: |
         docker login --username aniket2468 --password ${{secrets.ACCESS_TOKEN}} ghcr.io
-        docker buildx build -t ghcr.io/aniket2468/ciphers-service:latest-file . --push
-        docker push ghcr.io/aniket2468/ciphers-service:latest-file
+        docker buildx build -t ghcr.io/aniket2468/ciphers-service:aav . --push
+        docker push ghcr.io/aniket2468/ciphers-service:aav
